correction/deployment-mediawiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-deployment
  labels:
    app: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  template:
    metadata:
      labels:
        app: mediawiki
    spec:
      containers:
      - name: mediawiki
        image: harbor.kakor.ovh/public/mediawiki:latest
        securityContext:
          allowPrivilegeEscalation: true
        ports:
        - containerPort: 80
