correction/deployment-mysql.yaml
#############
##A COMPLETER
############

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: harbor.kakor.ovh/public/mysql:latest
        ports:
        - containerPort: 80
