correction/svc-mediawiki.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki
spec:
  selector:
    app: mediawiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
